# flashpods

./: .gitignore  Cargo.toml  PRD.md  PROMPT.md  loop.sh  pretty_print.py  progress.txt  run.sh
.beads/: issues.jsonl
specs/: 00-overview.md  01-architecture.md  02-trust-boundary.md  03-jobs.md  04-resource-scheduling.md  05-uploads.md  06-logs.md  07-artifacts.md  08-spire.md  09-token-service.md  10-mcp-tools.md  11-api.md  12-database.md  13-nixos.md  14-validation.md  15-container-mounts.md  16-mcp-server.md  17-error-codes.md  18-operations.md  19-deployment.md  README.md
src/: main.rs
src/artifacts/: mod.rs
src/db/: jobs.rs  mod.rs  pool.rs  uploads.rs
src/jobs/: mod.rs
src/middleware/: auth.rs
src/models/: job.rs  mod.rs  upload.rs
src/podman/: mod.rs
src/uploads/: mod.rs
